# ORF_annotate

./: LICENCE.txt  README.md  pyproject.toml
orf_annotate/: annotate_bed.py  main.py  orf.py  orf_annotate.py  sequence.py  utils.py
